# find-crypto-wallets

./: .gitignore  FindWallets.py  LICENSE  LogRedirector.py  Main.py  MojaAplikacja.spec  README.en.md  README.md  Start.py  api_client.py  app.py  blockchain_analyzer.py  cache_manager.py  config.csv  config.json  config_manager.py  constants.py  datetime_helper.py  error_handler.py  error_handling.py  error_log.txt  excel_reporter.py  exchange_rate_service.py  gui_helpers.py  main.py  main_refactored.py  main_window.py  pyproject.toml  requirements.txt  start_refactored.py  wallet_analyzer.py
.github/workflows/: ci.yml
Cache/: wallet_frequency_cache.json
Config/: config.json
Find Wallets.app/Contents/: Info.plist  document.wflow
Wallets/: wallet_frequency_cache.json
aaa.app/Contents/: Info.plist  document.wflow
backend/: api_client.py  blockchain_analyzer.py  cache_manager.py  config_manager.py  excel_reporter.py  exchange_rate_service.py  main.py  wallet_analyzer.py  wallet_processor.py
backend/wallets/: EGGS__T1_18-03-2025__T2_18-03-2025__T3_19-03-2025.xlsx  EGGS__T1_19-03-2024__T2_19-03-2024__T3_19-03-2024.xlsx  EGGS__T1_19-03-2024__T2_19-03-2024__T3_19-03-2024__1.xlsx  EGGS__T1_19-03-2025__T2_19-03-2025__T3_19-03-2025.xlsx  EGGS__T1_19-03-2025__T2_19-03-2025__T3_19-03-2025__1.xlsx  (+1 more)
frontend/: app.py  gui_app.py  gui_helpers.py  log_redirector.py  main_window.py  rounded_style.py
shared/: constants.py  datetime_helper.py  error_handler.py
shared/config/: config.json
tests/: test_datetime_helper.py  test_wallet_analyzer.py
śmieci/: informacje.rtf
(+20 files in other folders)
